manifests/aiot/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"api-gateway","namespace":"aiot"},"spec":{"ports":[{"port":8080,"targetPort":8080}],"selector":{"app":"api-gateway"}}}
    name: api-gateway
    namespace: aiot
  spec:
    clusterIP: 10.97.203.87
    clusterIPs:
    - 10.97.203.87
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: api-gateway
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"cloudbeaver","namespace":"aiot"},"spec":{"ports":[{"port":8978,"targetPort":8978}],"selector":{"app":"cloudbeaver"}}}
    name: cloudbeaver
    namespace: aiot
  spec:
    clusterIP: 10.106.5.89
    clusterIPs:
    - 10.106.5.89
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8978
      protocol: TCP
      targetPort: 8978
    selector:
      app: cloudbeaver
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"digital-twin","namespace":"aiot"},"spec":{"ports":[{"port":8001,"targetPort":8001}],"selector":{"app":"digital-twin"}}}
    name: digital-twin
    namespace: aiot
  spec:
    clusterIP: 10.110.239.193
    clusterIPs:
    - 10.110.239.193
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8001
      protocol: TCP
      targetPort: 8001
    selector:
      app: digital-twin
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"hello-aiot","namespace":"aiot"},"spec":{"ports":[{"port":80,"targetPort":8000}],"selector":{"app":"hello-aiot"}}}
    name: hello-aiot
    namespace: aiot
  spec:
    clusterIP: 10.103.95.125
    clusterIPs:
    - 10.103.95.125
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
    selector:
      app: hello-aiot
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"ngrok-proxy","namespace":"aiot"},"spec":{"ports":[{"port":8090,"targetPort":8090}],"selector":{"app":"ngrok-proxy"}}}
    name: ngrok-proxy
    namespace: aiot
  spec:
    clusterIP: 10.111.78.243
    clusterIPs:
    - 10.111.78.243
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8090
      protocol: TCP
      targetPort: 8090
    selector:
      app: ngrok-proxy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"open-webui","namespace":"aiot"},"spec":{"ports":[{"port":80,"targetPort":8080}],"selector":{"app":"open-webui"}}}
    name: open-webui
    namespace: aiot
  spec:
    clusterIP: 10.96.164.2
    clusterIPs:
    - 10.96.164.2
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: open-webui
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      cnpg.io/operatorVersion: 1.25.1
    labels:
      cnpg.io/cluster: pg-ha
    name: pg-ha-r
    namespace: aiot
    ownerReferences:
    - apiVersion: postgresql.cnpg.io/v1
      controller: true
      kind: Cluster
      name: pg-ha
  spec:
    clusterIP: 10.101.230.129
    clusterIPs:
    - 10.101.230.129
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      cnpg.io/cluster: pg-ha
      cnpg.io/podRole: instance
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      cnpg.io/operatorVersion: 1.25.1
    labels:
      cnpg.io/cluster: pg-ha
    name: pg-ha-ro
    namespace: aiot
    ownerReferences:
    - apiVersion: postgresql.cnpg.io/v1
      controller: true
      kind: Cluster
      name: pg-ha
  spec:
    clusterIP: 10.99.2.0
    clusterIPs:
    - 10.99.2.0
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      cnpg.io/cluster: pg-ha
      cnpg.io/instanceRole: replica
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      cnpg.io/operatorVersion: 1.25.1
    labels:
      cnpg.io/cluster: pg-ha
    name: pg-ha-rw
    namespace: aiot
    ownerReferences:
    - apiVersion: postgresql.cnpg.io/v1
      controller: true
      kind: Cluster
      name: pg-ha
  spec:
    clusterIP: 10.104.95.66
    clusterIPs:
    - 10.104.95.66
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      cnpg.io/cluster: pg-ha
      cnpg.io/instanceRole: primary
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"pgadmin","namespace":"aiot"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"pgadmin"}}}
    name: pgadmin
    namespace: aiot
  spec:
    clusterIP: 10.107.155.99
    clusterIPs:
    - 10.107.155.99
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: pgadmin
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"postgres","namespace":"aiot"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"cnpg.io/cluster":"pg-ha","role":"primary"},"type":"ClusterIP"}}
    name: postgres
    namespace: aiot
  spec:
    clusterIP: 10.102.58.199
    clusterIPs:
    - 10.102.58.199
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      cnpg.io/cluster: pg-ha
      role: primary
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"qdrant","namespace":"aiot"},"spec":{"ports":[{"name":"http","port":6333,"targetPort":6333},{"name":"grpc","port":6334,"targetPort":6334}],"selector":{"app":"qdrant"}}}
    name: qdrant
    namespace: aiot
  spec:
    clusterIP: 10.96.239.55
    clusterIPs:
    - 10.96.239.55
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 6333
      protocol: TCP
      targetPort: 6333
    - name: grpc
      port: 6334
      protocol: TCP
      targetPort: 6334
    selector:
      app: qdrant
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"rag-api-svc","namespace":"aiot"},"spec":{"ports":[{"port":7000,"targetPort":7000}],"selector":{"app":"rag-worker"}}}
    name: rag-api-svc
    namespace: aiot
  spec:
    clusterIP: 10.102.132.133
    clusterIPs:
    - 10.102.132.133
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 7000
      protocol: TCP
      targetPort: 7000
    selector:
      app: rag-worker
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"redis-master","namespace":"aiot"},"spec":{"ports":[{"port":6379,"targetPort":6379}],"selector":{"app":"redis"}}}
    name: redis-master
    namespace: aiot
  spec:
    clusterIP: 10.109.233.189
    clusterIPs:
    - 10.109.233.189
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
      app: redis
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
